--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,13 @@
 {
   "hosting": {
+    "firebase": "MotorMania",
     "public": "build",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
